Fixed the double scroll bar issue. Fixed 'Try Again' button not functioning correctly.

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,19 +1,15 @@
 /* PAGES */
 
 .page{ 
-    position: relative;
     padding-top: 150px;
-    text-align:center; 
-    width: 100%;
-	height: 100%;
-	background-repeat: repeat;
-    overflow: scroll;
+	width: 100%;
+	text-align:center; 
 }
 
-.page-home{ background: url("home.jpg");}
-.page-candidate{ background: url("candidates.jpg");}
-.page-result{ background: url("results.jpg");}
-.page-about{ background: url("about.jpg"); } 
+.page-home{ background: url("home.jpg") no-repeat center center fixed; background-size:cover; height:100%}
+.page-candidate{ background: url("candidates.jpg") no-repeat center center fixed; background-size:cover; height:auto}
+.page-result{ background: url("results.jpg") no-repeat center center fixed; background-size:cover; height:100%}
+.page-about{ background: url("about.jpg") no-repeat center center fixed; background-size:cover; height:auto} 
 
 .header-home{
 	color: white;
